# Auto-Evaluate-App

./: .gitignore  ACTIVE_TASK_CONTEXT_DATA_FORMAT.md  CLAUDE.md  README.md  REDIS_CLEANUP_PROGRESS.md  REDIS_MIGRATION_GUIDE.md  Remain.md  Remains.md  TASK_PACKAGE_IMPORT_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  WAKE_DETECTION_FINISH_TASK_IMPLEMENTATION.md  WAKE_DETECTION_OVERWRITE_LOGIC.md  WAKE_DETECTION_UI_DESIGN.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  upgrade.md  应用测试说明文档.md  结果导出模版.xlsx  车机语音LLM自动化评估系统文档.md
ReferenceCode/: description.md  machine-response.tsx
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/audio-test/: page.tsx
app/casemanage/: page.tsx
app/llm-analysis/: page.tsx
components/: analysis-results.tsx  app-sidebar.tsx  chartsample.tsx  config-settings.tsx  create-task.tsx  dashboard-layout.tsx  dashboard.tsx  llm-analysis-interface.tsx  machine-response.tsx  nav-bar.tsx  nav-tabs.tsx  ocr.tsx  progress-bar.tsx  score-display.tsx  settingspage.tsx  taskmanage.tsx  template-manager.tsx  test-samples.tsx  theme-toggle.tsx  timing-data-display.tsx  top-bar.tsx  visual-wake-detection.tsx  wake-detection-workflow.tsx  wake-samples.tsx  wake-word.tsx
docs/: import-flow-demo.md  ocr-multithreading-phase1-implementation.md  tauri-test-enhancements.md  wakedetectreferencedoc.md
hooks/: useAudioPlayer.ts  useAutoTest.ts  useData.ts  useExportCurrentTask.ts  useExportTaskReport.ts  useExportWakeDetectionResults.ts  useLLMAnalysis.ts  useTauriSamples.ts  useTauriTasks.ts  useTauriWakewords.ts  useTimingData.ts  useVoiceRecognition.ts  useWakeDetectionResults.ts
public/: ocr-worker.js  测试语料列表.xlsx
scripts/: deploy-ocr-multithreading.sh
services/: api.ts  tauri-analysis-api.ts  tauri-api.ts  tauri-audio-api.ts  tauri-video-ocr-api.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  Windows-Cargo.toml  tauri.conf.json  windows-build.bat
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  config_manager.rs  lib.rs  models.rs  permissions.rs  state.rs
src-tauri/src/db/: database.rs
src-tauri/src/services/: active_task.rs  analysis_service.rs  analysis_task.rs  asr_task.rs  audio_controller.rs  audio_task.rs  checkpoint_task.rs  finish_task.rs  meta_task_executor.rs  middle_task.rs  mod.rs  ocr_engine.rs  ocr_session.rs  ocr_task.rs  task_service.rs  visual_wake_detection.rs  wake_detection_meta_executor.rs  workflow.rs
store/: hooks.ts  index.ts  samplesSlice.ts  taskSlice.ts
tests/: duplicate-check-test.md  ocr-performance-test.ts
types/: api.ts  tauri.ts
utils/: exportTaskReport.ts  exportWakeDetectionResults.ts  generateASRTestReport.ts
(+35 files in other folders)
