[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["lfx"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2.6.0"
tauri-plugin-macos-permissions = "2.3.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rodio = { version = "0.17.3"}
futures = "0.3"
async-trait = "0.1.88"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
url = "2.5.4"
sha2 = "0.10.9"
hmac = "0.12.1"
futures-util = "0.3.31"
cpal = "0.16.0"
base64 = "0.22.1"
urlencoding = "2.1.3"
dotenv = "0.15"
rubato = "0.16.2"
rustls = { version = "0.23.28", features = ["ring"] }
tesseract = "0.15.2"
image = "0.25.6"
parking_lot = "0.12.4"
opencv = { version = "0.95.0", features = ["clang-runtime"] }
tauri-plugin-fs = "2"
once_cell = "1.19"
calamine = "0.25"
tauri-plugin-dialog = "2.3.1"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"
block = "0.1"
